Closed Bug 1625765 Opened 4 years ago Closed 4 years ago

Perma tier2 js\src\jit-test\tests\basic\bug1532265.js | Unknown (code -1073741819, args "--baseline-eager") [0.1 s]

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jandem)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=295238225&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Fi2wa8qCQOmQpe2kbCAs4A/runs/0/artifacts/public/logs/live_backing.log


[task 2020-03-29T10:39:10.942Z] TEST-PASS | js\src\jit-test\tests\basic\bug1532265.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [1.9 s]
[task 2020-03-29T10:39:11.041Z] Exit code: -1073741819
[task 2020-03-29T10:39:11.041Z] FAIL - basic\bug1532265.js
[task 2020-03-29T10:39:11.041Z] TEST-UNEXPECTED-FAIL | js\src\jit-test\tests\basic\bug1532265.js | Unknown (code -1073741819, args "--baseline-eager") [0.1 s]
[task 2020-03-29T10:39:11.041Z] INFO exit-status : -1073741819
[task 2020-03-29T10:39:11.041Z] INFO timed-out : False
[task 2020-03-29T10:39:15.341Z] TEST-PASS | js\src\jit-test\tests\basic\bug1532265.js | Success (code 0, args "--no-blinterp --no-baseline --no-ion --more-compartments") [4.3 s]
[task 2020-03-29T10:39:18.408Z] TEST-PASS | js\src\jit-test\tests\basic\bug1532265.js | Success (code 0, args "--blinterp-eager") [3.1 s]
[task 2020-03-29T10:39:18.507Z] TEST-PASS | js\src\jit-test\tests\basic\bug1548759-1.js | Success (code 0, args "") [0.1 s]

(In reply to Noemi Erli[:noemi_erli] from comment #1)

Could this be caused by https://hg.mozilla.org/mozilla-central/rev/e6daf3c4a8120043156c3b1c85f788885c6e2ad3?

It's unlikely to be from that change, but it could have exposed a pre-existing bug. I'll investigate.

Assignee: nobody → jdemooij
Status: NEW → ASSIGNED

It's from bug 1622561.

Flags: needinfo?(jdemooij)
Regressed by: 1622561
Has Regression Range: --- → yes
Keywords: regression
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/87174029f26c
Add missing OOM check to SrcNoteWriter::writeNote. r=arai
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: