Bug 1625765 - Add missing OOM check to SrcNoteWriter::writeNote. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D68752